# sundials_cmake_build

./: CMakeLists.txt  README.md
cmake/: sundials.cmake
src/: cvodes_example.cpp
